# carson-web

./: Cargo.toml  LICENSE-MIT  Shuttle.toml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Theme.toml  build.rs  index.html  index.scss
frontend/src/: app.rs  main.rs
frontend/src/common/: align.rs
frontend/src/components/: color_table.rs  header.rs  hr.rs  menu.rs  mod.rs  page.rs
frontend/src/pages/: colors.rs  home.rs  mod.rs
frontend/styles/: header.scss  hr.scss  menu.scss  theme.scss
