[package]
name = "carson-web-backend"
version = "0.1.0"
edition = "2021"
description = "Web backend for myers.sh"
readme = "README.md"
repository = "https://github.com/carsonmyers/carson-web/backend"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.6.20"
axum-extra = "0.8.0"
shuttle-axum = "0.33.0"
shuttle-runtime = "0.33.0"
tokio = "1.28.2"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
