[package]
name = "carson-web-frontend"
version = "0.1.0"
edition = "2021"
description = "Web frontend for myers.sh"
readme = "README.md"
repository = "https://github.com/carsonmyers/carson-web/frontend"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
