[package]
name = "carson-web-frontend"
version = "0.1.0"
edition = "2021"
description = "Web frontend for myers.sh"
readme = "README.md"
repository = "https://github.com/carsonmyers/carson-web/frontend"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-console = "0.3.0"
gloo-timers = "0.3.0"
web-sys = { version = "0.3.65", features = ["Window", "Location"] }
yew = { version="0.21", features=["csr"] }
yew-autoprops = "0.3.0"
yew-router = "0.18.0"

[build-dependencies]
anyhow = "1.0.75"
toml = "0.8.8"
